fix team on mobile

--- a/source/stylesheets/_team.scss
+++ b/source/stylesheets/_team.scss
@@ -83,6 +83,7 @@
 
       @include phone {
         right: 10rem;
+        top: 7rem;
       }
     }
 
@@ -131,7 +132,7 @@
     .close-mobile {
       position: absolute;
       right: 1rem;
-      top: 1rem;
+      top: 6rem;
       width: 4%;
       z-index: 200;
 
@@ -145,7 +146,6 @@
 
       @include phone {
         position: fixed;
-        top: 0;
         width: 100%;
         z-index: 200;
       }
